--- a/CSS/style-one.css
+++ b/CSS/style-one.css
@@ -245,6 +245,7 @@ a:hover {
     float: left;
     margin: 0 2rem 1rem 0;
 }
+
 /*
 ------mars----
 
@@ -264,8 +265,6 @@ a:hover {
 /*    overflow-y: auto;       !* скролл, если текста больше *!*/
 /*    padding-right: 5px;     !* чтобы скролл не налезал на текст *!*/
 /*}*/
-
-
 
 
 /* Улучшенные стили для карточек мифов */
@@ -319,8 +318,6 @@ a:hover {
 }
 
 
-
-
 /* Стили для изображений внутри карточек мифов */
 .mars-card img {
     border: 3px solid #ccc; /* Более мягкая граница */
@@ -336,6 +333,7 @@ a:hover {
     /* По умолчанию изображения не выходят за границы */
     z-index: 1;
 }
+
 /* Эффект при наведении мыши на изображение */
 .mars-card img:hover {
     transform: scale(1.5); /* Увеличивает изображение в 1.5 раза */
@@ -345,7 +343,6 @@ a:hover {
 .mars-card .video-container:hover {
     transform: scale(1.5); /* Увеличивает видео */
 }
-
 
 
 /* Контейнер для видео с эффектом расширения video */
@@ -379,7 +376,9 @@ a:hover {
 
 .z-index-group {
     transition: z-index 0s 0.2s; /* Плавный переход для z-index */
-    z-index: 1; /* По умолчанию находится на одном уровне */}
+    z-index: 1; /* По умолчанию находится на одном уровне */
+}
+
 /* При наведении поднимаем всю колонку, а не только видео */
 .z-index-group:hover {
     z-index: 10; /* Поднимаем колонку на передний план */
