--- a/CSS/style-one.css
+++ b/CSS/style-one.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: #fefefe;
     color: #333;
-    line-height: 1.6;
+    /*line-height: 1.6;*/
     text-align: center;
     /*font-size: 18px;*/
     margin: 0;
